# self-fastapi-template

./: .env  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 4e11434b5dda_test.py  a9c9e7816a4c_add_role_table.py  fa9771935df1_add_initial_roles.py
app/api/routes/: __init__.py  auth.py  user.py  worker.py
app/core/: app.py  factory.py  model.py  repository.py  service.py
app/core/db/: __init__.py  db.py  redis.py
app/core/dependencies/: me.py  role.py
app/core/middleware/: auth.py  exception.py
app/core/security/: authorize.py  jwt.py  jwtutil.py
app/models/: role.py  user.py
app/repositories/: __init__.py  role.py  user.py
app/schemas/: __init__.py  auth.py
app/services/: __init__.py  auth.py  role.py  user.py
worker/: __init__.py  tasks.py
