[project]
name = "self-fastapi-template"
version = "0.1.0"
description = ""
authors = [
    {name = "phillychi3",email = "phillychi3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pyjwt (>=2.10.1,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
